crates/snapshot-tests/tests/snapshots/parser__bad_inline_tables__eof.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected a table key, found eof at `a`
  ┌─ eof:1:6
  │
1 │ a = {
  │      ^ expected a table key


error: expected a table key, found eof at `a`
 --> eof:1:6
  |
1 | a = {
  |      ^ expected a table key
Error {
    kind: "Wanted",
    message: "expected a table key, found eof",
    span: 5..5,
    path: Some(
        "a",
    ),
}
